# GalaxyGram

./: .gitignore  README.md  manage.py  pyproject.toml
authentication/: forms.py  views.py
planetgram/: asgi.py  settings.py  urls.py  wsgi.py
planetmodel/: admin.py  apps.py  models.py  views.py
planetmodel/migrations/: 0001_initial.py  0002_alter_body_options.py  0002_auto_20210709_1639.py  0003_auto_20210709_1653.py  0004_alter_body_discoverydate.py  0005_auto_20210709_1658.py  0006_remove_body_volume.py  0007_remove_body_mass.py  0008_auto_20210709_1807.py
planetpost/: admin.py  apps.py  forms.py  models.py  views.py
planetpost/migrations/: 0001_initial.py  0002_initial.py  0002_planet_comments.py  0003_alter_planet_post_author.py
planetuser/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
planetuser/migrations/: 0001_initial.py
static/css/: style.css
templates/: 404.html  500.html  base.html  cards.html  generic_form.html  header.html  index.html  myuser_update_form.html  navbar.html  planet.html  planet_detail.html  post_detail.html  post_list.html  profile.html
