[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Jason Hoyt <hoytjmatthews@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django-503 = "^0.1"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
